# llama-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml
mysql/: docker.example  schema.sql
mysql/conf.d/: my.cnf
src/: alpaca-initial.txt  api.rs  engine.rs  main.rs
