[package]
name = "openai-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
bytesize = "1.2.0"
clap = { version = "4.3.15", features = ["cargo"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel", "crossbeam-queue"] }
lazy_static = "1.4.0"
llm = { path = "externs/rust-llm/crates/llm"}
log = "0.4.19"
mysql = "24.0.0"
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.9.3"
serde = "1.0.171"
serde_json = "1.0.102"
spinoff = "0.7.0"
tiny_http = "0.12.0"
uuid = { version = "1.4.1", features = ["v4"]}
zstd = "0.12.4"

[features]
default = ["cublas"]
cublas = ["llm/cublas"]
